--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -12,6 +12,20 @@
 .bl-blue2
   background-color: #ACE1FA !important
 
+.bl-bl
+  background-color: #000000 !important
+  color: #fff !important
+.bl-bl1
+  background-color: #1565C0 !important
+  color: #fff !important
+
+.pp-2
+  font-size: 20px
+  font-weight: 400
+  line-height: 1.5
+  color: #ffffff
+
+
 .bl-gr
   background-color: #f5f5f5 !important
 
@@ -42,8 +56,13 @@ td
     background-color: #4DD0E1
 
 img, svg
-    width: auto;
-    align-content: center;
-    align-items: center;
+    width: auto
+    align-content: center
+    align-items: center
+
+td
+  background-color: #ffffff
+
+
 
 
